--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "reset:seed": "node reset-db.js && node seeds.js",
     "rebuild": "npm rebuild sqlite3"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
