--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
 
